--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 asgiref==3.2.7
 astroid==2.4.0
 colorama==0.4.3
+dj-database-url==0.5.0
 Django==3.0.5
 django-crispy-forms==1.9.0
+django-environ==0.4.5
+django-heroku==0.3.1
 isort==4.3.21
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+psycopg2==2.8.5
 pylint==2.5.0
 pytz==2020.1
 six==1.14.0
 sqlparse==0.3.1
 toml==0.10.0
+whitenoise==5.0.1
 wrapt==1.12.1
