--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.0.5
 django-crispy-forms==1.9.0
 django-environ==0.4.5
 django-heroku==0.3.1
+gunicorn==20.0.4
 isort==4.3.21
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
